register and login with next-auth

--- a/client/.env
+++ b/client/.env
@@ -1,4 +1,11 @@
-FACEBOOK_CLIENT = 3584338585121461
-FACEBOOK_SECRET = 95ba6cf13cae0fa40f03148d477c85f7
+TWITCH_CLIENT = s71ce8awb2g8sk6wxsrqsizxu14bx4
+TWITCH_SECRET = ay04733298f66plafobzy9reo2va5b
+
+GOOGLE_CLIENT = 303089696961-pctgj1r1o9kd7vdmkgjo63ddk1pnfb80.apps.googleusercontent.com    
+GOOGLE_SECRET = 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
+
 
 PETICION_BACK = http://localhost:3001/
+
+NEXTAUTH_URL = http://localhost:3000
+NEXTAUTH_SECRET = asd
