--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
     "axios": "^1.4.0",
+    "dotenv": "^16.3.1",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
     "framer-motion": "^10.12.16",
