login and register with validation

--- a/client/.env
+++ b/client/.env
@@ -8,4 +8,4 @@ GOOGLE_SECRET = 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
 PETICION_BACK = http://localhost:3001/
 
 NEXTAUTH_URL = http://localhost:3000
-NEXTAUTH_SECRET = asd
+NEXTAUTH_SECRET = 3231c686ddc6e77607d18363e25c4682
